[tool.poetry]
name = "hexlet-code"
version = "0.1.5"
description = "Five games - you can play with numbers"
authors = ["Adel Yudina <adelyudina@gmail.com>"]
repository = "https://github.com/delavdele/python-project-49.git"
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
random2 = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:start"
brain-calc = "brain_games.scripts.brain_calc:start"
brain-gcd = "brain_games.scripts.brain_gcd:start"
brain-progression = "brain_games.scripts.brain_progression:start"
brain-prime = "brain_games.scripts.brain_prime:main"
